feat: add getFlightById endpoint for flight
